minishift/templates/logsender/deploy/deploymentconfig-logsender.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  labels:
    app: logsender
    environment: test
  name: logsender
spec:
  replicas: 1
  selector:
    app: logsender
    deploymentconfig: logsender
  template:
    metadata:
      labels:
        app: logsender
        deploymentconfig: logsender
        environment: test
    spec:
      containers:
      - env:
        - name: APP_JVM_ENV
          value: -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5005 -Dactivemq_hostname=$ACTIVEMQ_HOSTNAME -Dactivemq_port=$ACTIVEMQ_PORT -Dactivemq_username=$ACTIVEMQ_USERNAME -Dactivemq_password=$ACTIVEMQ_PASSWORD -Dcredentials.file=/opt/inera/credentials/credentials.properties -Dconfig.folder=/opt/inera -Dconfig.file=/opt/inera/logsender-konfiguration/logsender.properties -Dlogback.file=/opt/inera/logsender-konfiguration/logsender-logback.xml
        - name: ACTIVE_SPRING_PROFILES
          value: test
        - name: ACTIVEMQ_USERNAME
          valueFrom:
            secretKeyRef:
              name: logsender-amq-credentials
              key: amq_username
        - name: ACTIVEMQ_PASSWORD
          valueFrom:
            secretKeyRef:
              name: logsender-amq-credentials
              key: amq_password
        - name: ACTIVEMQ_HOSTNAME
          valueFrom:
            secretKeyRef:
              name: logsender-amq-credentials
              key: amq_hostname
        - name: ACTIVEMQ_PORT
          valueFrom:
            secretKeyRef:
              name: logsender-amq-credentials
              key: amq_port

        image: 'docker-registry.default.svc:5000/intyg/logsender'
        imagePullPolicy: Always
        name: logsender
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 5005
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
         - mountPath: /opt/inera/logsender-konfiguration
           name: logsender-konfiguration-test
           readOnly: true
         - mountPath: /opt/inera/certifikat
           name: logsender-test-certifikat
           readOnly: true
         - mountPath: /opt/inera/credentials
           name: logsender-test-credentials
           readOnly: true

      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
       - configMap:
           defaultMode: 420
           name: logsender-konfiguration-test
         name: logsender-konfiguration-test
       - name: logsender-test-certifikat
         secret:
           defaultMode: 420
           secretName: intygsbestallning-certifikat
       - name: logsender-test-credentials
         secret:
           defaultMode: 420
           secretName: intygsbestallning-credentials
  test: false
