minishift/templates/logsender/deploy/route-logsender.yaml
apiVersion: v1
kind: Route
metadata:
  name: logsender-route
  namespace: intygstjanster-test
spec:
  host: logsender-route-intygstjanster-test.192.168.99.100.nip.io
  path: /
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: logsender
    weight: 100
  wildcardPolicy: None
